# quint-sandbox

SimpleBank/: Cargo.toml  bank.qnt
SimpleBank/src/: action.rs  bank.rs  main.rs
SimpleBank/tests/: bank_mbt.rs
