[package]
name = "simple_bank"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "17.0.2"
clap = { version = "4.5.53", features = ["derive"] }
itf = "0.2.4"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.17"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_with = "3.16.1"
serde_json = "1.0"
serde_with_macros = "3.16.1"
dashu-int = "0.4.1"
datatest = "0.8.0"
